Rewrite ES storage and update PlayerNPC lib - Update NPC ES mappers to match with new PlayerNPC API - Add way more debugs to ES calls and clarify existing ones (Replace save by create or update) - Rewrite all caching things, to simplify everything (Now using records when it's needed instead of Entry) - Update worker to match with Storage and PlayerNPC lib update - Huge code optimize following IDE recommendations